# gnn-dr

./: .containerignore  .gitignore  Containerfile  LICENSE  README.md  pyproject.toml
configs/: default.yaml  test.yaml
gnn_dr/baselines/: __init__.py  base.py  metrics.py  parametric_umap.py  pca_baseline.py  tsne_baseline.py  umap_baseline.py
gnn_dr/config/: __init__.py  config.py  loader.py
gnn_dr/datasets/: caltech_dr.py  cifar_dr.py  clip_dr_base.py  clip_embedding_utils.py  dtd_dr.py  emnist_dr.py  fashion_mnist_dr.py  fgvc_aircraft_dr.py  flowers102_dr.py  food101_dr.py  kmnist_dr.py  laion_dr.py  loaders.py  mnist_dr.py  multi_dataset.py  node_budget_sampler.py  oxford_pets_dr.py  stanford_cars_dr.py  stl10_dr.py  svhn_dr.py  torchvision_clip.py  transforms.py
gnn_dr/evaluation/: evaluate_model.py  evaluate_parametric_umap.py  precompute_knn_graphs.py  run_full_evaluation.py  show_metric_table.py
gnn_dr/network/: convolutions.py  dr_evaluation_callback.py  lightning_datamodule.py  lightning_module.py  losses.py  model.py  multi_size_evaluation_callback.py  preprocessing.py  replay_buffer.py
gnn_dr/utils/: constants.py  logging.py  umap_weights.py  visualization.py
scripts/: analyze_results.py  evaluate.py  evaluate_parametric_umap.py  export_data_for_tikz.py  generate_figure.py  generate_scatter.py  generate_scatter_plots.py  plot_iterations.py  run_baselines.py  sweep_iterations.py  train.py
